# pisama-core

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/pisama_core/: __init__.py
src/pisama_core/adapters/: __init__.py  autoresearch.py  base.py
src/pisama_core/audit/: __init__.py  logger.py  models.py
src/pisama_core/config/: __init__.py  loader.py  models.py
src/pisama_core/detection/: __init__.py  base.py  orchestrator.py  registry.py  result.py
src/pisama_core/detection/detectors/: __init__.py  coordination.py  cost.py  hallucination.py  loop.py  repetition.py
src/pisama_core/healing/: __init__.py  base.py  engine.py  models.py
src/pisama_core/healing/fixes/: __init__.py  break_loop.py  escalate.py  switch_strategy.py
src/pisama_core/injection/: __init__.py  enforcement.py  protocol.py
src/pisama_core/scoring/: __init__.py  engine.py  thresholds.py
src/pisama_core/tokenization/: __init__.py  detector.py  generator.py  keychain.py  tokenizer.py  vault.py
src/pisama_core/traces/: __init__.py  enums.py  models.py
src/pisama_core/utils/: __init__.py  json_utils.py  time_utils.py
tests/: __init__.py  conftest.py  test_audit.py  test_config.py  test_detection.py  test_healing.py  test_injection.py  test_scoring.py  test_traces.py
