[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pisama-core"
version = "1.0.0"
description = "Core detection, scoring, and healing engine for PISAMA agent forensics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "PISAMA Team", email = "team@pisama.dev" }
]
keywords = [
    "ai",
    "agents",
    "monitoring",
    "forensics",
    "self-healing",
    "observability"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
tokenization = [
    "cryptography>=41.0.0",  # AES-256-GCM encryption
]
tokenization-linux = [
    "cryptography>=41.0.0",
    "secretstorage>=3.3.0",  # Linux Secret Service keychain
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "cryptography>=41.0.0",
]

[project.urls]
Homepage = "https://github.com/tn-pisama/pisama-core"
Documentation = "https://pisama.dev/docs"
Repository = "https://github.com/tn-pisama/pisama-core"

[tool.hatch.build.targets.wheel]
packages = ["src/pisama_core"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
